--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "i-finance",
   "private": "true",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.14",
-    "esbuild": "^0.17.15",
-    "postcss": "^8.4.21",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^15.1.0",
-    "postcss-nested": "^6.0.1",
-    "tailwindcss": "^3.3.1"
+    "@hotwired/stimulus": "3.2.1",
+    "@hotwired/turbo-rails": "7.3.0",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/typography": "0.5.9",
+    "autoprefixer": "10.4.14",
+    "esbuild": "0.16.17",
+    "postcss": "8.4.21",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-import": "15.1.0",
+    "postcss-nested": "6.0.1",
+    "tailwindcss": "3.3.1"
   },
   "scripts": {
     "build": "node esbuild.config.js",
     "build:css": "tailwindcss --postcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "devDependencies": {
-    "chokidar": "^3.5.3"
+    "chokidar": "3.5.3"
   }
 }
