--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "i-finance",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "3.2.1",
+    "@hotwired/turbo-rails": "7.3.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.14",
