--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.1"
   },
   "scripts": {
