--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "i-finance",
-  "private": "true",
+  "private": true,
+  "eslint": "./node_modules/.bin/eslint",
   "dependencies": {
     "@hotwired/stimulus": "3.2.1",
     "@hotwired/turbo-rails": "7.3.0",
@@ -18,9 +19,23 @@
   },
   "scripts": {
     "build": "node esbuild.config.js",
-    "build:css": "tailwindcss --postcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
+    "build:css": "tailwindcss --postcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css",
+    "lint": "yarn run eslint --ext .js --ext .jsx --ext .gql --ext .graphql app/javascript"
   },
   "devDependencies": {
-    "chokidar": "3.5.3"
+    "chokidar": "3.5.3",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "eslint-plugin-testing-library": "^5.10.2"
   }
 }
