--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "yarn run eslint --ext .js --ext .jsx --ext .gql --ext .graphql app/javascript"
   },
   "devDependencies": {
+    "@prettier/plugin-ruby": "3.2.2",
     "chokidar": "3.5.3",
     "eslint": "8.37.0",
     "eslint-config-airbnb": "19.0.4",
@@ -36,6 +37,12 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "3.11.0",
-    "eslint-plugin-testing-library": "5.10.2"
+    "eslint-plugin-testing-library": "5.10.2",
+    "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "0.2.7"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true
   }
 }
