--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "eslint": "./node_modules/.bin/eslint",
   "dependencies": {
     "@apollo/client": "3.7.11",
-    "@hotwired/stimulus": "3.2.1",
     "@hotwired/turbo-rails": "7.3.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
@@ -18,6 +17,7 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
