--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "@hotwired/turbo-rails": "7.3.0",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
-    "apollo-link": "1.2.14",
     "autoprefixer": "10.4.14",
     "esbuild": "0.16.17",
     "graphql": "16.6.0",
     "graphql-ruby-client": "1.11.7",
     "graphql-tag": "2.12.6",
+    "jwt-decode": "3.1.2",
     "postcss": "8.4.21",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "6.10.0",
+    "react-router-dom": "6.10.0",
+    "react-router-v6-instrumentation": "2.0.2",
     "tailwindcss": "3.3.1"
   },
   "scripts": {
