--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.14",
+    "axios": "1.3.5",
     "esbuild": "0.16.17",
     "graphql": "16.6.0",
     "graphql-ruby-client": "1.11.7",
